[package]
name = "chorder"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
glib = "0.18.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[dependencies.gtk]
package = "gtk4"
version = "0.7.3"
features = ["v4_12"]

[dependencies.gdk]
package = "gdk4"
version = "0.7.3"
features = ["v4_12"]
